Fixed Contrast Issue
Fixed low contrast on East Magazine block.

--- a/sass/_alumni.sass
+++ b/sass/_alumni.sass
@@ -217,9 +217,9 @@ body
 			&.AA-burnt-gold
 				.lead, h2
 					color: $burnt-gold-aa
-			&.gold-grey
+			&.grey
 				.lead, h2
-					color: $gold-grey
+					color: $grey
 					&:hover
 						text-decoration: underline
 			.lead
